--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "flickity": "^2.2.1",
+    "jquery": "^3.5.1",
+    "nouislider": "^14.6.2",
+    "owl.carousel": "^2.3.4",
+    "popper.js": "^1.16.1",
     "sweet-scroll": "^4.0.0"
   },
   "devDependencies": {
